--- a/packages/frontend/src/i18n/locales/en.json
+++ b/packages/frontend/src/i18n/locales/en.json
@@ -12,7 +12,8 @@
     "search": "Search",
     "select": "Select",
     "viewDetails": "View Details",
-    "details": "Details"
+    "details": "Details",
+    "description": "ChatOneSwap is a decentralized exchange on Binance Smart Chain. Swap tokens, add liquidity, and trade with low fees. Support for Chinese, English, and Korean."
   },
   "nav": {
     "swap": "Swap",
